--- a/randomGame.css
+++ b/randomGame.css
@@ -30,6 +30,8 @@
     border-radius: 50%;
     width: 250px;
     height: 250px;
+    object-fit: cover;
+    object-position: 50% 50%;
 }
 
 #dislikeButton{
